feat: add sanitized diagnostics and finish system pages